cambios de git commit -a

--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,11 @@
 </head>
 <body>
     <h1>blog de mi git y github</h1>
+        <div class="directorio">
 
+            <h2>si esssss</h2>
+            <p>esto es una practica de git</p>
+        </div>
 
 </body>
 </html>
