--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,9 @@
     <title>blog</title>
 </head>
 <body>
+    <div id="cabecera">
+        <h1>cabecera</h1>
+    </div>
     <h1>blog de mi git y github</h1>
         <div class="directorio">
 
