--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
     </div>
    
         <div class="directorio">
-            <h1>blog de mi git y github</h1>
+            <h1>blog de mi git y github</h1git>
             <h2>si esssss</h2>
             <p>esto es una practica de git</p>
         </div>
