--- a/blog.html
+++ b/blog.html
@@ -13,6 +13,9 @@
 
             <h2>si esssss</h2>
             <p>esto es una practica de git</p>
+            <p>es es loeij blog de ensaño fjsslefrdffdk <br>
+                fjgddvf fff fvf fdff 
+            </p>
         </div>
 
 </body>
